Various alignment and modernization tweaks
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>